--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "@vuepress/bundler-vite": "^2.0.0-rc.24",
-    "@vuepress/theme-default": "^2.0.0-rc.112",
-    "vuepress": "^2.0.0-rc.24",
+    "@vuepress/bundler-vite": "^2.0.0-rc.23",
     "@vuepress/plugin-back-to-top": "^2.0.0-rc.106",
     "@vuepress/plugin-slimsearch": "^2.0.0-rc.106",
-    "sass": "^1.89.1"
+    "@vuepress/theme-default": "^2.0.0-rc.106",
+    "sass": "^1.89.1",
+    "vuepress": "^2.0.0-rc.23"
   }
 }
